# mcp-framework

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.lh/: .env.example.json  .env.json  Dockerfile.json  README.md.json  app.json.json  docker-compose.yml.json  pyproject.toml.json
.lh/mcp_simple_tool/: __main__.py.json  server.py.json
.lh/mcp_simple_tool/core/: __init__.py.json  sse_adapter.py.json  stdio_adapter.py.json
.lh/mcp_simple_tool/tools/: README.md.json  __init__.py.json  base.py.json  image_recognition_tool.py.json  loader.py.json  pdf_tool.py.json  quick_pdf_tool.py.json  url_tool.py.json  web_tool.py.json  word_tool.py.json
.lh/mcp_simple_tool/tools/utils/: __init__.py.json  pdf_helpers.py.json
.lh/mcp_tool/tools/: README.md.json  __init__.py.json  doc_analysis_tool.py.json  image_recognition.py.json  llm_tool.py.json  loader.py.json  pdf_tool.py.json  quick_pdf_tool.py.json
mcp_tool/: server.py
mcp_tool/tools/: __init__.py  excel_tool.py  file_tool.py  loader.py  maxkb_tool.py  pdf_tool.py  quick_pdf_tool.py  word_tool.py
