[project]
name = "mcp-simple-tool"
version = "0.1.0"
description = "MCP工具集合，包含文件处理和网页获取功能"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "aigo666" }]
keywords = ["mcp", "llm", "automation", "web", "fetch", "pdf", "word", "excel"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "anyio>=4.5", 
    "click>=8.1.0", 
    "httpx>=0.27", 
    "mcp",
    "PyPDF2>=3.0.0",
    "pdf2image>=1.16.0",
    "Pillow>=10.0.0",
    "pymupdf4llm==0.0.17",
    "PyMuPDF>=1.22.0",
    "python-docx>=0.8.11",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pytesseract>=0.3.10",
]

[project.scripts]
mcp-simple-tool = "mcp_tool.server:main"

[project.optional-dependencies]
dev = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9", "pytest-asyncio>=0.23.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_tool"]

[tool.pyright]
include = ["mcp_tool"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9", "pytest-asyncio>=0.23.5"]
